WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270219
Fix field-sizing interaction with relayout boundaries
https://bugs.webkit.org/show_bug.cgi?id=270219
Summary
Fix field-sizing interaction with relayout boundaries
Luke Warlow
Reported
2024-02-28 04:34:21 PST
https://github.com/WebKit/WebKit/blob/3bfc7a132be7e254295ea6031befc01b467f81bb/Source/WebCore/rendering/RenderObject.cpp#L529
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-06 04:35:16 PST
<
rdar://problem/124133877
>
Luke Warlow
Comment 2
2024-05-15 12:54:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28611
EWS
Comment 3
2025-03-07 10:22:02 PST
Committed
291783@main
(1cdfa78d9cba): <
https://commits.webkit.org/291783@main
> Reviewed commits have been landed. Closing PR #28611 and removing active labels.
Luke Warlow
Comment 4
2025-03-07 10:47:59 PST
Elements with field-sizing: content now correctly causes a relayout when the size changes, previously sibling elements wouldn't move to their correct locations
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug