`field-sizing: content` should disable relayout boundaries for text controls https://bugs.webkit.org/show_bug.cgi?id=270219

Reviewed by NOBODY (OOPS!).

Updates objectIsRelayoutBoundary to account for field-sizing property value.

* LayoutTests/imported/w3c/web-platform-tests/html/rendering/widgets/field-sizing-input-number-relayout-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/widgets/field-sizing-input-number-relayout-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/widgets/field-sizing-input-number-relayout.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/widgets/field-sizing-input-text-relayout-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/widgets/field-sizing-input-text-relayout-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/widgets/field-sizing-input-text-relayout.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/widgets/field-sizing-textarea-relayout-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/widgets/field-sizing-textarea-relayout-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/widgets/field-sizing-textarea-relayout.html: Added.
* Source/WebCore/rendering/RenderObject.cpp:
(WebCore::objectIsRelayoutBoundary):